# Claude-realtime-voice-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml  server.py
.claude/: settings.json
.claude/commands/: talk.md  talkback.md  vocab.md  voice.md
hooks/: speak_on_stop.py
scripts/: setup.sh  warmup.py
voice_mcp/: audio_io.py  config.py  daemon.py  ipc_client.py  sanitize.py  stt_guard.py  summarizer.py  tools.py  vocab_correct.py
voice_mcp/stt/: __init__.py  base.py  voxtral_backend.py  whisper_backend.py
voice_mcp/tts/: __init__.py  base.py  elevenlabs_backend.py  kokoro_backend.py
