[project]
name = "claude-voice-mcp"
version = "0.1.0"
description = "Bidirectional local voice (STT/TTS) MCP server for Claude Code, built on mlx-audio for Apple Silicon, with an optional ElevenLabs backend."
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp[cli]>=1.2.0",
    "mlx-audio[tts]>=0.2.7",
    "misaki[ja,zh]>=0.6.0",
    "num2words>=0.5.13",
    "spacy>=3.7",
    "phonemizer-fork>=3.3.2",
    "espeakng-loader>=0.2.4",
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    "webrtcvad>=2.0.10",
    "requests>=2.32",
]

[project.scripts]
claude-voice-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_mcp"]
